6956931: assert(SafepointSynchronize::is_at_safepoint()) failed: must be executed at a safepoint

Reviewed-by: kvn, dcubed